Fixed a bugg that displayed a horizontal scrollbar when displaying the nav

--- a/style/_global.scss
+++ b/style/_global.scss
@@ -37,11 +37,13 @@ $menu-font-color: white;
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Source Sans 3", sans-serif;
   background-color: $primary-color;
+  overflow-x: hidden;
 }
 
 h1 {
