--- a/style/_header.scss
+++ b/style/_header.scss
@@ -72,7 +72,7 @@ header {
   }
   nav {
     position: absolute;
-    top: 10.8rem;
+    top: 10.7rem;
     right: 0;
     width: 65rem;
     background-color: $primary-color;
@@ -127,7 +127,7 @@ header {
 
     nav {
       width: 100%;
-      min-height: 70vh;
+      min-height: 71vh;
     }
   }
 }
