--- a/style/style.css
+++ b/style/style.css
@@ -6,11 +6,13 @@
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Source Sans 3", sans-serif;
   background-color: #202e45;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -245,7 +247,7 @@ header .burgerking.toggle:hover {
 }
 header nav {
   position: absolute;
-  top: 10.8rem;
+  top: 10.7rem;
   right: 0;
   width: 65rem;
   background-color: #202e45;
@@ -292,7 +294,7 @@ header nav.showNavbar {
   }
   header nav {
     width: 100%;
-    min-height: 70vh;
+    min-height: 71vh;
   }
 }
 @keyframes showNavbar {
